# language-zig

./: README.md  cabal.project  dump.txt  hie.yaml  language-zig.cabal  pkgs.nix  shell.nix
.github/workflows/: CI.yaml
app/: Main.hs
bench/: Main.hs
src/: AST.hs  Eval.hs  Grammar.hs  Parser.hs  Parsing.hs  Program.hs  Syntax.hs  Util.hs  VM.hs
src/Runtime/: AST.hs  Allocate.hs  Eval.hs  Program.hs  Typecheck.hs  VM.hs  Value.hs
test/: Spec.hs
test/Test/: Eval.hs  Parse.hs
test/fixtures/: compress.zig  exit.zig  helloworld.zig
