cabal-version:   2.4
name:            language-zig
version:         0
license:         BSD-3-Clause
build-type:      Simple
extra-doc-files:
  README.md
  CHANGELOG.md

license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2020 Jonas Carpay

-- tested-with:     GHC ==8.8.3
-- category:        CATEGORIES

common common-options
  build-depends:      base >=4.13.0.0 && <5
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    AST
    Syntax

  build-depends:
    , bytestring
    , containers
    , megaparsec
    , mtl
    , parser-combinators
    , pretty-simple
    , prettyprinter

-- TODO remove pretty-simple
executable language-zig-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  language-zig
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite language-zig-test
  import:         common-options
  type:           exitcode-stdio-1.0

  -- hack to get ghcid reload for tests, see https://github.com/ndmitchell/ghcid/issues/320#issuecomment-714734766
  hs-source-dirs: test src

  -- hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , bytestring
    , containers
    , directory
    , filepath
    , language-zig
    , megaparsec
    , parser-combinators
    , tasty
    , tasty-hunit
    , tasty-quickcheck

  -- containers, parser-combinators is not actually used, see hack
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark language-zig-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , language-zig

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
